[gd_scene load_steps=8 format=3 uid="uid://bnkoxifi4xu0c"]

[ext_resource type="Script" uid="uid://ddmqdl5txsnnb" path="res://go_to.gd" id="1_mew4y"]
[ext_resource type="Theme" uid="uid://d0kqpuio6hw8v" path="res://assets/theme.tres" id="1_vvker"]
[ext_resource type="Texture2D" uid="uid://dysog03uhs7lt" path="res://assets/Untitled_Artwork.png" id="3_obfiy"]
[ext_resource type="AudioStream" uid="uid://dxx8fo20sxug7" path="res://assets/99625__tec_studio__bell003mono.wav" id="4_ly2k8"]

[sub_resource type="Animation" id="Animation_ly2k8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_mew4y"]
resource_name = "advertise"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.58, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 2.7314403, -1.0925761]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.03333333, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_obfiy"]
_data = {
&"RESET": SubResource("Animation_ly2k8"),
&"advertise": SubResource("Animation_mew4y")
}

[node name="go_to" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mew4y")
metadata/_edit_use_anchors_ = true

[node name="decorate" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -300.0
offset_right = -241.0
offset_bottom = -184.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_vvker")
theme_override_font_sizes/font_size = 27
text = "Decorate Rooms"
metadata/_edit_use_anchors_ = true

[node name="inside" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 241.0
offset_top = -300.0
offset_right = 500.0
offset_bottom = -184.0
grow_horizontal = 2
grow_vertical = 2
rotation = -0.0006195732
theme = ExtResource("1_vvker")
theme_override_font_sizes/font_size = 27
text = "Inside Hotel"
metadata/_edit_use_anchors_ = true

[node name="advertise" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 241.0
offset_top = 184.0
offset_right = 500.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_vvker")
theme_override_font_sizes/font_size = 27
text = "Advertise Hotel"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_obfiy")
}

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(342, 61)
scale = Vector2(3.625, 3.09375)
texture = ExtResource("3_obfiy")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_ly2k8")
volume_db = -16.475

[connection signal="pressed" from="decorate" to="." method="_on_decorate_pressed"]
[connection signal="pressed" from="inside" to="." method="_on_inside_pressed"]
[connection signal="pressed" from="advertise" to="." method="_on_advertise_pressed"]
